--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,6 +1,3 @@
-# /etc/puppetlabs/code/environments/production/data/common.yaml
 ---
-profile::hiera_test::ssl: false
-profile::hiera_test::message: lolkek
-profile::leltest::meh: just meh...
+profile::hostan::: just meh...
 
