--- a/hiera.yaml
+++ b/hiera.yaml
@@ -9,7 +9,13 @@ defaults:  # Used for any hierarchy level that omits these keys.
 hierarchy:
   - name: "Per-node data"                   # Human-readable name.
     path: "nodes/%{trusted.certname}.yaml"  # File path, relative to datadir.
-
+  - name: "Keys for eyaml"
+    path: "keys"
   - name: "Common data"
     path: "common.yaml"
 
+eyaml:
+  datadir: data
+  pkcs7_private_key: data/keys/private_key.pkcs7.pem
+  pkcs7_public_ket:  data/keys/public_key.pkcs7.pem
+    
