--- a/hiera.yaml
+++ b/hiera.yaml
@@ -11,8 +11,8 @@ hierarchy:
     path: "nodes/%{trusted.certname}.yaml"  # File path, relative to datadir.
     lookup_key: eyaml_lookup_key
     options:
-      pkcs7_private_key: data/keys/private_key.pkcs7.pem
-      pkcs7_public_key:  data/keys/public_key.pkcs7.pem
+      pkcs7_private_key: keys/private_key.pkcs7.pem
+      pkcs7_public_key:  keys/public_key.pkcs7.pem
   - name: "Keys for eyaml"
     path: "keys"
   - name: "Common data"
