--- a/hiera.yaml
+++ b/hiera.yaml
@@ -8,13 +8,11 @@ defaults:  # Used for any hierarchy level that omits these keys.
 
 hierarchy:
   - name: "Per-node eyaml data"                   # Human-readable name.
-    path: "nodes/%{trusted.certname}.yaml"  # File path, relative to datadir.
+    path: "nodes/%{trusted.certname}.eyaml"  # File path, relative to datadir.
     lookup_key: eyaml_lookup_key
     options:
       pkcs7_private_key: keys/private_key.pkcs7.pem
       pkcs7_public_key: keys/public_key.pkcs7.pem
-  - name: "Keys for eyaml"
-    path: "keys"
   - name: "Common data"
     path: "common.yaml"
    
